--- a/xml/lsdb_main/lsdb_main.html
+++ b/xml/lsdb_main/lsdb_main.html
@@ -1193,8 +1193,8 @@
      </p><div class='doc'><p>Pathogenicity of variant.</p>
 <p>Controlled vocabulary for pathogenicity is sourced from the GEN2PHEN project. See: <a href="http://www.gen2phen.org/wiki/varioml-pathogenicity">VarioML - Pathogenicity</a>.</p>
 <p>SKOS terms are preferred: http://purl.org/varioml/pathogenicity/skos/1.0/</p>
-<pathogenicity term="Likely pathogenic"  uri="http://purl.org/varioml/pathogenicity/skos/1.0#p_0003"> </pathigenicity>
-<pathogenicity term="Likely pathogenic"  source="g2p" accession="p_0003" > </pathigenicity>
+<pathogenicity term="Likely pathogenic"  uri="http://purl.org/varioml/pathogenicity/skos/1.0#p_0003"> </pathogenicity>
+<pathogenicity term="Likely pathogenic"  source="g2p" accession="p_0003" > </pathogenicity>
 <p>Note that g2p is always used as a source</p>
 <p>Examples of the terms:</p>
 <ul>
